<resources>
	<string name="prefs">Settings</string>
	<string name="prefs_logging">Logging</string>
	<string name="prefs_wifi_catalog">Wifi Catalog</string>
	<string name="prefs_maps">Maps</string>
	<string name="prefs_gps" translatable="false">GPS</string>
	<string name="prefs_gps_os_settings">Phone\'s GPS settings</string>
	<string name="prefs_gps_os_settings_summary">Click to see your phone\'s GPS settings</string>
	<string name="prefs_check_gps_startup">Check GPS at startup</string>
	<string name="prefs_check_gps_startup_summary">Warn if GPS is disabled at startup</string>
	<string name="prefs_gps_logging_interval">GPS logging interval</string>
	<string name="prefs_gps_logging_interval_summary">Use 0 for the shortest possible (affects battery
		life)
	</string>
	<string name="prefs_gps_logging_interval_seconds">seconds</string>
	<string name="prefs_save_gpx">Save GPX track</string>
	<string name="prefs_save_gpx_summary">On export, create a GPX file locally on your device</string>
	<string name="prefs_ui">User interface</string>
	<string name="prefs_map_none">None</string>
	<string name="prefs_ui_keep_screen_on">Keep screen on</string>
	<string name="prefs_ui_keep_screen_on_summary">Prevent screen locking after idle time
	</string>
	<string name="prefs_credentials">Credentials</string>
	<string name="prefs_credentials_user">Login</string>
	<string name="prefs_credentials_user_summary">If you don\'t have an account yet, create on at http://radiocells.org (Required for upload only)</string>
	<string name="prefs_credentials_password">Password</string>
	<string name="prefs_credentials_password_summary">Passwords:</string>
	<string name="prefs_credentials_anonymous_upload">Anonymous upload</string>
    <string name="prefs_credentials_anonymous_upload_summary">Activate for anonymous upload</string>
	<string name="prefs_save_cells">Save Cells</string>
	<string name="prefs_save_cells_summary">Activate to scan for cells
	</string>
	<string name="prefs_save_wifis_summary">Activate to scan for wifis</string>
	<string name="prefs_save_wifis">Save Wifis</string>
	<string name="prefs_data_map">Offline map</string>
	<string name="prefs_data_map_summary">Browse your offline map repository
	</string>
	<string name="prefs_data_ref_database">Select Wifi Catalog</string>
	<string name="prefs_data_ref_database_summary">Install a wifi catalog to see all known openbmap
		wifis on the map. This helps you, when you\'re looking for new wifis
	</string>
	<string name="prefs_download_wifi_catalog">Download Wifi Catalog</string>
	<string name="prefs_download_wifi_catalog_summary">Current size (10-400MB depending on country)</string>
	<string name="prefs_min_cell_distance">Cell log interval</string>
	<string name="prefs_min_cell_distance_hint">Minimum distance between two cell scans (in meter)</string>
	<string name="prefs_min_wifi_distance">Wifi log interval</string>
	<string name="prefs_min_wifi_distance_hint">Minimum distance between two wifi scans (in
		meters)
	</string>
	<string name="prefs_req_gps_accuracy">GPS threshold</string>
	<string name="prefs_req_gps_accuracy_hint">If GPS accuracy is worse than
		threshold, scan results are discarded (in meters)
	</string>
	<string name="prefs_display_always_on">Screen always on</string>
	<string name="prefs_display_always_on_summary">Screen will stay on while tracking. Disable to save battery</string>
	<string-array name="prefs_gps_provider_keys">
		<item>Internal</item>
	</string-array>
	<string-array name="prefs_gps_provider_values">
		<item>GPS_PROVIDER</item>
	</string-array>
	<string name="prefs_debug">Debug settings</string>
	<string name="prefs_simulate_upload_summary">Export data only, don\'t upload to server</string>
	<string name="prefs_simulate_upload">Skip upload to openbmap.org</string>
	<string name="prefs_keep_export_files_summary">Keep a local copy of uploaded files.\nFind files in
		data directory.\n(Helpful for debugging)
	</string>
	<string name="prefs_keep_export_files">Keep uploaded files</string>
	<string name="prefs_clean_database_summary">Database grows over time. Click to free unused
		space by reorganising database
	</string>
	<string name="prefs_clean_database_title">Reorganise database</string>
	<string name="prefs_privacy">Privacy</string>
	<string name="prefs_block_homezone_summary">Blocks logging in 500m around current position. You
		can also directly edit custom_location.xml on your SD-card
	</string>
	<string name="prefs_block_homezone_title">Don\'t scan my back-yard</string>
	<string name="prefs_anonymise_ssid_summary">Replaces SSIDs in uploads with a MD5 hash to
		mitigate privacy issues (SSID \'John Does Wifi\' would become something like
		\'FD33531\')
	</string>
	<string name="prefs_anonymise_ssid">Anonymise SSID in upload files</string>
	<string name="prefs_folder_settings">Folder settings</string>
	<string name="prefs_map_folder">Map folder</string>
	<string name="prefs_data_map_folder_summary">Select map folder</string>
	<string name="prefs_wifi_catalog_folder">Wifi catalog folder</string>
	<string name="prefs_wifi_catalog_folder_summary">Select wifi catalog folder
	</string>
	<string name="app_name" translatable="false">Radiobeacon</string>
	<string name="cell">Cell</string>
	<string name="operator">Operator</string>
	<string name="type">Type</string>
	<string name="dbm" translatable="false">dBm</string>
	<string name="ssid" translatable="false">SSID</string>
	<string name="level">Level</string>
	<string name="turn_on_gps_question">GPS is switched off! Would you like to activate GPS
		now?</string>
	<string name="gsm" translatable="false">GSM</string>
	<string name="edge" translatable="false">EDGE</string>
	<string name="umts" translatable="false">UMTS</string>
	<string name="cdma" translatable="false">CDMA</string>
	<string name="edvo_0" translatable="false">EDVO0</string>
	<string name="edvo_a" translatable="false">EDVOA</string>
	<string name="onexrtt" translatable="false">1xRTT</string>
	<string name="hsdpa" translatable="false">HSDPA</string>
	<string name="hsupa" translatable="false">HSUPA</string>
	<string name="hspa" translatable="false">HSPA</string>
	<string name="iden" translatable="false">IDEN</string>
	<string name="edvo_b" translatable="false">EDVOB</string>
	<string name="lte" translatable="false">LTE</string>
	<string name="ehrpd" translatable="false">eHRPD</string>
	<string name="hspa_p" translatable="false">HSPA+</string>
	<string name="networkTypeCaption">Technology</string>
	<string name="cellIdCaption">Cell ID</string>
	<string name="baseIdCaption" translatable="false">Base ID</string>
	<string name="operatorCaption">Operator</string>
	<string name="mccCaption" translatable="false">MCC</string>
	<string name="mncCaption" translatable="false">MNC</string>
	<string name="strenghtDbmCaption">Strength (dbm)</string>
	<string name="is_serving_cell_caption">Is serving cell?</string>
	<string name="radiobeacon_licence">Licensed under AGPL v3</string>
	<string name="openbmap_licence_caption">Data: OpenBmap</string>
	<string name="openbmap_license">CC-by-SA 3.0 / Odbl Licence</string>
	<string name="mapsforge_source">Maps library: Mapsforge Library</string>
	<string name="mapsforge_license">GNU LGPL3 licence</string>
	<string name="credits">Credits</string>
	<string name="map_data_source">Map data: Openstreetmap</string>
	<string name="map_data_license">Odbl Licence</string>
	<string name="other_credits">Many thanks to all the contributors and translators!\nSpecial thanks to the mapsforge people and the OSMTracker developers.
	</string>
	<string name="bug_report">Always find the latest version (and the issue
		tracker) at
	</string>
	<string name="subtitle">OpenBmap Wifi &amp; Cell Logger</string>
	<string name="sessions">Sessions</string>
	<string name="id" translatable="false">#</string>
	<string name="n_a">N/A</string>
	<string name="total_empty" translatable="false">(--)</string>
	<string name="capabilities">Capabilities</string>
	<string name="frequency">Frequency</string>
	<string name="channel">Channel</string>
	<string name="date">Date</string>
	<string name="please_select_map">Please select a map file first!</string>
	<string name="error_dowload_error">Error: Download failed. Maybe connection was
		interrupted?
	</string>
	<string name="warning_outdated_client">Your client version is too old.\nPlease update!</string>
	<string name="warning_no_server_connection">Couldn\'t contact server. Are you online?</string>
	<string name="warning_client_version_not_checked">Couldn\'t contact server. Either you\'re offline or
		the server is down!</string>
	<string name="warning_session_closed">Can\'t resume! Session has already been uploaded.
	</string>
	<string name="warning_already_uploaded">Won\'t upload session. Has already been uploaded!
	</string>
	<string name="question_delete_session">Do you want to delete session?</string>
	<string name="session_already_uploaded">Session already uploaded</string>
	<string name="confirmation">Confirmation</string>
	<string name="user_or_password_missing">User name or password is missing!</string>
	<string name="question_enter_user">Enter user name and password now?</string>
	<string name="deleted">Deleted!</string>
	<string name="warning_sd_not_writable">Can\'t write to SD card. Perhaps mounted on desktop
		pc?
	</string>
	<string name="error_save_file_failed">Download failed! Check SD card /
		permissions!
	</string>
	<string name="error_create_directory_failed">Couldn\'t create data directory</string>
	<string name="tap_hotspot_to_see_details">Tap wifi to see details</string>
	<string name="start_tracking">Start tracking</string>
	<string name="stop_tracking">Stop tracking</string>
	<string name="battery_warning">Battery low: Stopping track</string>
	<string name="version">Version:</string>
	<string name="warning">Warning!</string>
	<string name="hint_notification">Tap here to display main screen</string>
	<string name="notification">RadioBeacon is tracking (#{0})</string>
	<string name="notification_caption">Radiobeacon is scanning</string>
	<string name="exporting_wifis">Exporting wifis</string>
	<string name="uploading_wifis">Uploading wifis</string>
	<string name="exporting_cells">Exporting cells</string>
	<string name="uploading_cells">Uploading cells</string>
	<string name="exporting_gpx">Writing GPX to SD card</string>
	<string name="resume">Resume</string>
	<string name="stop">Stop</string>
	<string name="delete">Delete</string>
	<string name="upload">Upload</string>
	<string name="export_gpx">Export GPX track</string>
	<string name="delete_all">DELETE ALL</string>
	<string name="upload_skipped">Upload skipped (If this happened accidentally,
		check
		your debug settings)
	</string>
	<string name="preparing_export">Preparing export..</string>
	<string name="app_description">Openbmap.org wifi and cell logger</string>
	<string name="error">Error</string>
	<string name="prefs_update_catalog_summary">Adds scanned wifis to local wifi catalog</string>
	<string name="prefs_update_catalog">Sync wifi catalog locally</string>
	<string name="upload_all">Upload all</string>
	<string name="new_session">New session</string>
	<string name="settings">Settings</string>
	<string name="lac" translatable="false">LAC</string>
	<string name="activity_advanced_settings_activity">Advanced settings</string>
	<string name="prefs_ignore_battery_summary">Continue scanning even with low battery (only recommended if you have external battery supply)</string>
	<string name="prefs_ignore_battery_title">Ignore low battery</string>
	<string name="sort_by_timestamp">Sort by timestamp</string>
	<string name="sort_by_ssid">Sort A-Z</string>
	<string name="show_only_new">Show only new</string>
	<string name="show_only_free">Show only free</string>
	<string name="show_all">Show all</string>
	<string name="prefs_get_maps_title">Get offline map</string>
	<string name="prefs_get_maps_summary">Download offline map</string>
	<string name="waypoint">WP</string>
</resources>