<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android" >

    <PreferenceCategory
        android:title="@string/prefs_credentials"
        android:icon="@drawable/ic_menu_account_list"
        >
        <EditTextPreference
            android:dialogTitle="@string/prefs_credentials_user"
            android:key="credentials.user"
            android:summary="@string/prefs_credentials_user_summary"
            android:title="@string/prefs_credentials_user" />
        <EditTextPreference
            android:dialogTitle="@string/prefs_credentials_password"
            android:key="credentials.password"
            android:password="true"
            android:summary="@string/prefs_credentials_password_summary"
            android:title="@string/prefs_credentials_password" />
        <CheckBoxPreference
            android:key="credentials.anonymous_upload"
            android:password="false"
            android:summary="@string/prefs_credentials_anonymous_upload_summary"
            android:title="@string/prefs_credentials_anonymous_upload" />
    </PreferenceCategory>

    <PreferenceCategory android:title="@string/prefs_logging" >
        <CheckBoxPreference
            android:defaultValue="true"
            android:key="save_cells"
            android:summary="@string/prefs_save_cells_summary"
            android:title="@string/prefs_save_cells" />
        <CheckBoxPreference
            android:defaultValue="true"
            android:key="save_wifis"
            android:summary="@string/prefs_save_wifis_summary"
            android:title="@string/prefs_save_wifis" />

        <EditTextPreference
            android:defaultValue="35"
            android:dialogMessage="@string/prefs_min_cell_distance_hint"
            android:inputType="numberDecimal"
            android:key="logging.cell_distance"
            android:summary="@string/prefs_min_cell_distance_hint"
            android:title="@string/prefs_min_cell_distance" />

        <EditTextPreference
            android:defaultValue="5"
            android:dialogMessage="@string/prefs_min_wifi_distance_hint"
            android:inputType="numberDecimal"
            android:key="logging.wifi_distance"
            android:summary="@string/prefs_min_wifi_distance_hint"
            android:title="@string/prefs_min_wifi_distance" />

        <EditTextPreference
            android:defaultValue="0"
            android:inputType="number"
            android:key="gps.interval"
            android:summary="@string/prefs_gps_logging_interval_summary"
            android:title="@string/prefs_gps_logging_interval" />

        <EditTextPreference
            android:defaultValue="35"
            android:dialogMessage="@string/prefs_req_gps_accuracy_hint"
            android:inputType="numberDecimal"
            android:key="logging_gps_accuracy"
            android:summary="@string/prefs_req_gps_accuracy_hint"
            android:title="@string/prefs_req_gps_accuracy" />

    </PreferenceCategory>

    <PreferenceCategory android:title="@string/prefs_maps">
        <org.openbmap.activities.DialogPreferenceMaps
            android:selectable="true"
            android:enabled="true"
            android:title="@string/prefs_get_maps_title"
            android:summary="@string/prefs_get_maps_summary"
            android:key="maps_dialog">
        </org.openbmap.activities.DialogPreferenceMaps>
        <ListPreference
            android:defaultValue="none"
            android:key="data.map"
            android:summary="@string/prefs_data_map_summary"
            android:title="@string/prefs_data_map"/>
        <CheckBoxPreference
            android:defaultValue="true"
            android:key="ui.keep_screen_on"
            android:summary="@string/prefs_ui_keep_screen_on_summary"
            android:title="@string/prefs_ui_keep_screen_on" />
    </PreferenceCategory>
    <PreferenceCategory android:title="@string/prefs_wifi_catalog">
        <ListPreference
            android:defaultValue="none"
            android:key="data.ref_database"
            android:summary="@string/prefs_data_ref_database_summary"
            android:title="@string/prefs_data_ref_database"/>

        <Preference android:key="data.download_wifi_catalog"
            android:summary="@string/prefs_download_wifi_catalog_summary"
            android:title="@string/prefs_download_wifi_catalog"/>
    </PreferenceCategory>

    <Preference
        android:key="advanced_settings"
        android:title="@string/activity_advanced_settings_activity" />
</PreferenceScreen>