<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"  xmlns:app="http://schemas.android.com/apk/res-auto" >

    <item
        android:id="@+id/menu_create_new_session"
        android:icon="@android:drawable/ic_menu_add"
        app:showAsAction="always"
        android:title="@string/new_session">
    </item>
    <item
        android:id="@+id/menu_upload_all"
        android:icon="@android:drawable/ic_menu_upload"
        app:showAsAction="always"
        android:title="@string/upload_all">
    </item>
    <item
        android:id="@+id/menu_settings"
        android:icon="@android:drawable/ic_menu_preferences"
        app:showAsAction="ifRoom|withText"
        android:title="@string/settings">
    </item>
    <item
        android:id="@+id/menu_credits"
        android:icon="@android:drawable/ic_menu_help"
        app:showAsAction="ifRoom|withText"
        android:title="@string/credits">
    </item>

</menu>