<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent" >

    <TextView
        android:layout_width="30dp"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:padding="2dp"
        android:text="@string/id"
        android:layout_gravity="top"
        android:layout_marginTop="6dp" />

    <TextView
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:padding="2dp"
        android:text="@string/date"
        android:layout_gravity="top"
        android:layout_marginTop="6dp" />

    <ImageView
        android:layout_width="40dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical|center_horizontal|right|top"
        android:src="@drawable/ic_wifi"
        tools:ignore="ContentDescription" />

    <ImageView
        android:layout_width="40dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical|center_horizontal|top"
        android:src="@drawable/ic_cell"
        tools:ignore="ContentDescription"
        android:layout_marginTop="3dp" />

    <TextView
        android:layout_width="60dp"
        android:layout_height="wrap_content"
        android:padding="3dp"
        android:text="@string/waypoint"
        android:layout_marginTop="6dp"
        android:gravity="center" />

    <ImageView
        android:layout_width="30dp"
        android:layout_height="fill_parent"
        android:layout_gravity="right"
        android:layout_marginRight="3dp"
        android:paddingLeft="3dp"
        android:paddingRight="3dp"
        android:src="@android:drawable/ic_secure"
        tools:ignore="ContentDescription" />

    <ImageView
        android:id="@+id/sessionlistfragment_statusicon"
        android:layout_width="30dp"
        android:layout_height="fill_parent"
        android:layout_gravity="right"
        android:layout_marginRight="3dp"
        android:paddingLeft="3dp"
        android:paddingRight="3dp"
        tools:ignore="ContentDescription" />

</LinearLayout>